--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytes = "1"
-cfg = "0.5.0"
 encoding_rs = "0.8.32"
-http = "0.2.8"
-https = "1.12.5"
-pebble = "0.8.5"
-reqwest = { version = "0.11.14", featured = ["full"]}
 serde = "1.0.152"
 serde_derive = "1.0.152"
 tokio = { version = "1.25.0", features = ["full"]}
+warp = "0.3.3"
