attempt to use pickle db

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 encoding_rs = "0.8.32"
+pickledb = "0.5.1"
 serde = "1.0.152"
 serde_derive = "1.0.152"
 tokio = { version = "1.25.0", features = ["full"]}
