--- a/parallel-server/Cargo.toml
+++ b/parallel-server/Cargo.toml
@@ -9,4 +9,7 @@ edition = "2021"
 actix = "0.13.0"
 actix-web = "4.3.1"
 blist = "0.0.4"
+clap = { version = "4.1.13", features = ["derive"] }
+reqwest = { version = "0.11.15", features = ["json"] }
 serde = { version = "1.0.158", features = ["derive"] }
+tokio = "1.26.0"
