begin drill tests

--- a/parallel-server/Cargo.toml
+++ b/parallel-server/Cargo.toml
@@ -8,5 +8,11 @@ edition = "2021"
 [dependencies]
 actix = "0.13.0"
 actix-web = "4.3.1"
+assert_cmd = "2.0.10"
 blist = "0.0.4"
+drill = "0.8.2"
+predicates = "3.0.2"
+reqwest = "0.11.15"
 serde = { version = "1.0.158", features = ["derive"] }
+tokio = "1.26.0"
+tokio-test = "0.4.2"
