--- a/parallel-server/tests/post.yml
+++ b/parallel-server/tests/post.yml
@@ -1,13 +1,14 @@
 ---
 
-concurrency: 100
+concurrency: 10
 base: 'http://localhost:8081'
-iterations: 1000000
+iterations: 100
 rampup: 2
 
 plan:
   - name: Post message
     request:
+      method: POST
       headers:
         Authorization: "Bearer a"
       body:  '[{"deviceId": "b", "payload": { "cType": 0, "ciphertext": "hello"}}]'
