--- a/parallel-networked-server/Cargo.toml
+++ b/parallel-networked-server/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 actix = "0.13.0"
 actix-web = "4.3.1"
+bincode = "1.3.3"
 blist = "0.0.4"
 clap = { version = "4.1.13", features = ["derive"] }
 reqwest = { version = "0.11.15", features = ["json"] }
