--- a/tests/goose/Cargo.toml
+++ b/tests/goose/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 goose = "^0.17"
+goose-eggs = "0.5.1"
 rand = "0.8.5"
 random-string = "1.0.0"
 reqwest = "0.11.16"
