--- a/parallel-networked-server/Cargo.toml
+++ b/parallel-networked-server/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 actix = "0.13.0"
 actix-web = "4.3.1"
+actix-web-lab = { version = "0.19.1", default-features = false }
 bincode = "1.3.3"
 blist = "0.0.4"
 clap = { version = "4.1.13", features = ["derive"] }
