--- a/parallel-networked-server/Cargo.toml
+++ b/parallel-networked-server/Cargo.toml
@@ -14,4 +14,5 @@ blist = "0.0.4"
 clap = { version = "4.1.13", features = ["derive"] }
 reqwest = { version = "0.11.15", features = ["json"] }
 serde = { version = "1.0.158", features = ["derive"] }
+serde_json = "1.0.95"
 tokio = "1.26.0"
