--- a/tests/goose/Cargo.toml
+++ b/tests/goose/Cargo.toml
@@ -14,3 +14,6 @@ reqwest = "0.11.16"
 serde = "1.0.159"
 serde_json = "1.0.95"
 tokio = "^1.12"
+
+noise_server = { path = "../../parallel-networked-server" }
+bincode = "1.3.3"
